[package]
name = "esrgan"
version = "0.1.0"
edition = "2021"
authors = ["Floris @ floris@xylex.ai"]

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
futures-util = "0.3.31"
serde_json = "1.0.139"
serde_yaml = "0.9.34"
supabase_rs = "0.4.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde_json"] }
